<resources>
    <string name="app_name">Project XX</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_add__project">Projekt hinzufügen</string>
    <string name="action_addProject">Neues Projekt</string>
    <string name="txt_Projectname">Projektname:</string>
    <string name="txt_Projectdesc">Projektbeschreibung:</string>
    <string name="btn_hinzufuegen">Projekt Hinzufügen</string>
    <string name="act_hinzufuegen">Projekt Hinzufügen</string>

    <string name="actname_allProjects">Alle Projekte</string>

    <string name="title_activity_project_detail">Details</string>
    <string name="termin">Termin/Meilenstein</string>
    <string name="disc">Diskussion</string>

    <string name="title_activity_calender">Kalender</string>
    <string name="title_activity_list_calendars">list_calendars</string>
    <string name="title_activity_calendar_list">Calendar_list</string>
    <string name="title_activity_list__appointments">List_Appointments</string>

    <string name="title_activity_contact__list">Contacts</string>

    <string name="cmenu_listProjects_update">Projekt ändern</string>
    <string name="cmenu_listProjects_removeMember">Projekt verlassen</string>

    <string name="pDetail_menue_addUser">Teilnehmer Hinzufügen</string>
    <string name="pDetail_menue_addEvent">Termin Hinzufügen</string>

    <string name="calendar_menue_addEvent">Termin Hinzufügen</string>

    <string name="title_activity_new_disc">Neue Diskussion</string>
    <string name="newDiscAddKommentar">Kommentar hinzufügen</string>
    <string name="newdisc">Titel</string>
    <string name="newPost">Schreibe deine Nachricht</string>
    <string name="btnNewDiscAdd">Diskussion veröffentlichen</string>
    <string name="newdisc_Act">Neue Diskussion</string>

    <string name="title_activity_forum_posts">Posts</string>
    <string name="btnAddPost">Send</string>
    <string name="hintAddPost">Message</string>

    <string name="title_activity_add_appointment">Termin hinzufügen</string>
    <string name="textAddAppointment">Termin hinzufügen</string>
    <string name="txt_AppointmentDesc">Terminbeschreibung</string>
    <string name="txt_AppointmentName">Terminname</string>
    <string name="btnAddAppointment">Termin hinzufügen</string>

    <string name="title_activity_update_project">UpdateProject</string>
    <string name="statusINTIME">INTIME</string>
    <string name="statusDELAYED">DELAYED</string>
    <string name="statusOUTOFTIME">OUTOFTIME</string>
    <string name="statusFINISHED">FINISHED</string>
    <string name="btn_aendern">Projekt ändern</string>
    <string name="menutxt_RemoveAppointment">Termin löschen</string>





</resources>
