<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/activityBackground"
    tools:context="de.fh_muenster.projectxx.add_appointment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textAddAppointment"
        android:textColor="@color/textColor"
        android:id="@+id/addAppointmentTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AppointmentNameTxt"
        android:layout_below="@+id/addAppointmentTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoText="false"
        android:editable="true"
        android:hint="@string/txt_AppointmentName"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/AppointmentDescribeTxt"
        android:layout_below="@+id/AppointmentNameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:hint="@string/txt_AppointmentDesc"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddAppointment"
        android:textColor="@color/textColor"
        android:background="@color/btnBackground"
        android:id="@+id/add_Appointment"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="false"
        android:onClick="add_Appointment"/>

</RelativeLayout>
