<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/activityBackground"
    tools:context="de.fh_muenster.projectxx.UpdateProject">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/UpdatePnameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoText="false"
        android:editable="true"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/UpdatePdescribeTxt"
        android:layout_below="@+id/UpdatePnameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_aendern"
        android:textColor="@color/btnTextColor"
        android:id="@+id/btnUpdate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/btnBackground"
        android:onClick="updateProject"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/UpdatePdescribeTxt">


    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusDELAYED"
        android:id="@+id/radioButton"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/UpdatePdescribeTxt"
        android:layout_alignEnd="@+id/UpdatePdescribeTxt" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusINTIME"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusOUTOFTIME"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusFINISHED"
        android:id="@+id/radioButton4"
        android:layout_below="@+id/radioButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RadioGroup>

</RelativeLayout>
