<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/activityBackground"
    tools:context="de.fh_muenster.projectxx.Add_Project">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PnameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autoText="false"
        android:editable="true"
        android:hint="@string/txt_Projectname"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/PdescribeTxt"
        android:layout_below="@+id/PnameTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:hint="@string/txt_Projectdesc"
        android:textColorHint="@color/textColorHint"
        android:textColor="@color/textColor"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_hinzufuegen"
        android:textColor="@color/btnTextColor"
        android:id="@+id/btnAdd"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/btnBackground"
        android:onClick="add_Project"
        />

</RelativeLayout>
